fix: spacing

--- a/style.css
+++ b/style.css
@@ -317,7 +317,7 @@ p{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 3rem;
+    margin-top: 6rem;
   }
   
   .feature {
@@ -369,6 +369,7 @@ p{
     .features {
       flex-direction: column;
       align-items: center;
+      margin-top: 2rem;
       gap: 5rem;
     }
   
@@ -659,7 +660,7 @@ footer .wave#wave4 {
         height: auto;
         width:125px;
         top: 75px;
-        right: -125px;
+        right: -126px;
         text-align: right;
         z-index: 1000;
         transition: 0.75s;
